--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,28 @@
+body,
+body * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 body{
-    background-color: darkblue;
+    background-color: #ffffff;
 }
     .container {
         display: inline-block;
-        background-color: darkkhaki;
         width: 900px;
         margin-left: calc(50% - 450px);
         margin-top: 150px;
     }
         .left { 
             display: inline-block;
-            background-color: darksalmon;
             width: 50%;
             float: left;
         }
             .right {
                 width: 40%;
                 display: inline-block;
-                background-color: deeppink;
+                padding: 20px;
                 float: right;
                 border: 1px solid #cccccc;
                 border-radius: 10px;
@@ -28,13 +33,42 @@ body{
                 }
                     .form-row{
                         display: inline-block;
-                    width: 100%;
-                }
+                        width: 100%;
+                        margin-bottom: 20px;
+                    }
                         .main-title{
                             display: inline-block;
                             width: 100%;
                             text-align: center;   
                         }
+                        .label{
+                            display: inline-block;
+                            width: 100%;
+                            font-size: 12px;
+                            font-weight: bold;
+                            margin-bottom: 5px;
+                        }
+                            .required{
+                            color: red;
+                            }
+                        .input{
+                            display: inline-block;
+                            width: 100%;
+                            padding: 5px;
+                        }  
+                        .checkbox {
+
+                        }
+                        .checkbox-label {
+    
+                        }
+                        .forgot-link {
+    
+                        }
+                        .btn {
+                            display: inline-block;
+                            width: 100%;
+                        }  
                 .form-bottom {
                     display: inline-block;
                     width: 100%;
