--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,7 @@ body{
                             display: inline-block;
                             width: 100%;
                             padding: 5px;
+                            padding-left: 20px;
                         }  
                         .checkbox {
 
