--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,4 @@
-body,
-body * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
+
 body{
     background-color: #ffffff;
 }
@@ -64,13 +58,12 @@ body{
     
                         }
                         .forgot-link {
-    
+                            float: right;
                         }
-                        .btn {
-                            display: inline-block;
+                        .btn{
                             width: 100%;
-                        }  
-                .form-bottom {
+                        }
+                    .form-bottom {
                     display: inline-block;
                     width: 100%;
                 }
