--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,10 @@ body{
                             width: 100%;
                             text-align: center;   
                         }
+                        .paragraph{
+                            margin-top: 30px;
+                            color: #7F9AA5;
+                        }
                         .label{
                             display: inline-block;
                             width: 100%;
