--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ body{
                         display: inline-block;
                         width: 100%;
                         margin-bottom: 20px;
+                        position: relative;
                     }
                         .main-title{
                             display: inline-block;
@@ -54,6 +55,12 @@ body{
                             width: 100%;
                             padding: 5px;
                             padding-left: 20px;
+                        }
+                        .form-row > .fa {
+                            position: absolute;
+                            bottom: 8px;
+                            left: 5px;
+                            font-size: 14px;
                         }  
                         .checkbox {
 
