--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ body{
                 float: right;
                 border: 1px solid #cccccc;
                 border-radius: 10px;
-                margin-top: 50px;
+                margin-top: calc(50% - 415px);
             }
                 .form {
                     display: inline-block;
