--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body{
         margin-top: 150px;
     }
     .konteineris{
-        isplay: inline-block;
+        display: inline-block;
         width: 900px;
         margin-left: calc(50% - 450px);
     }
@@ -134,5 +134,35 @@ body{
                         font-weight: bold;
                         color: #555;
                     }
-        
+                    @media ( max-width: 1200px ) {
+                        .container {
+                            width: 800px;
+                            margin: 100px calc(50% - 400px) 0;
+                        }
+                    }
+                    
+                    @media ( max-width: 900px ) {
+                        .container {
+                            width: 600px;
+                            margin: 50px calc(50% - 300px);
+                        }
+                            .left {
+                                width: 60%;
+                                margin: 0 20%;
+                            }
+                            .right {
+                                width: 100%;
+                                padding: 20px;
+                                margin-bottom: 50px;
+                            }
+                    }
+                    
+                    @media ( max-width: 700px ) {
+                        .container {
+                            width: 100%;
+                            margin: 50px 0;
+                        }
+                            .right {
+                                border: none;
+                            }
        
